Fix overflow issue on body, I swear it wasn't there yesterday 😣

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,6 +1,7 @@
 // Global typography
 body {
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 a {
