--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -1,7 +1,18 @@
 .container {
   // width: 400px;
-  background-color: red;
-  // @include grid-column(10);
+
+  background-color: tomato;
+  height: 90vh;
   width: 90%;
   margin: 0 auto;
+  .form {
+    @include grid-column(6);
+    background-color: thistle;
+    height: 300px;
+  }
+  .other-side {
+    @include grid-column(6);
+    background-color: mistyrose;
+    height: 300px;
+  }
 }
